bugs squashed

--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@
 }
 * {
     box-sizing: border-box;
+    
 }
 
 html, body {
     margin: 0;
     padding: 0;
+    
 }
 
 body {
     background-color: white;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     position: relative;
     font-family:  sans-serif;
     text-align: center;
@@ -195,7 +198,9 @@ h2 {
     background-color: #e8e8e8;
     padding: 1%;
     padding-top: 2%;
-    height: 220px;
+    height: auto;
+    min-height: 220px;
+    
     
 }
 .projectcard:nth-child(2n) {
@@ -223,6 +228,7 @@ h2 {
   position: relative;
   display:block;
   width: 125px;
+    
   padding: 5px 5px;
   font-weight: 700;
   font-size: 15px;
@@ -373,7 +379,7 @@ footer {
 @media only screen and (max-width: 600px) {
     #bio {
         margin-left: 20px;
-        width: 100vw;
+        width: 100%;
     }
     .profile {
         width: 70%;
